--- a/gymHouse/static/css/styles_changePassword.css
+++ b/gymHouse/static/css/styles_changePassword.css
@@ -30,3 +30,83 @@ html{
 }
 
 /* Todo clean para que te diviertas :D */
+.cambiarclave{
+    display: flex;
+    flex-direction: column;
+    width: 30%;
+    max-width: 80rem;
+    min-width: 28rem;
+    padding: 3rem 6%;
+    background: lavender;
+    border-radius: 30px;
+    margin: 2rem auto;
+}
+.cambiarclave a{
+    margin: 0 0 2rem 0;
+}
+.cambiarclave img{
+    width: 3rem;
+    height: 3rem;
+    padding: 1rem;
+}
+.cambiarclave h1{
+    font-family: "raleway bold";
+    font-size: 2.4rem;
+    margin: auto auto 4rem;
+}
+.cambiarclave label{
+    font-family: "raleway semibold";
+    font-size: 1.6rem;
+}
+.cambiarclave input{
+    padding: 1rem;
+    width: 100%;
+    background-color: white;
+    box-shadow: inset 0px 0px 8px rgba(0, 0, 0, 0.3);
+    border: none;
+    border-radius: 20px;
+    margin: 1rem auto 2.4rem
+}
+.cambiarclave .button{
+    width: fit-content;
+    font-family: "raleway bold";
+    font-size: 1.4rem;
+    padding: 1.5rem 4.5rem;
+    color: #d6e1ff;
+    background: #5135ff;
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+    margin: 3rem auto 1rem;
+    border: none;
+    border-radius: 20px;
+    overflow: hidden;
+}
+
+
+@media (max-width: 1100px) {
+    .cambiarclave{
+        width: 50%;
+    }
+}
+@media (max-width: 700px) {
+    .cambiarclave{
+        width: 70%;
+    }
+}
+@media (max-width: 500px) {
+    .cambiarclave{
+        width: 90vw;
+        min-width: 20rem;
+        padding: 3rem 1rem;
+    }
+    .cambiarclave input{
+        width: 90%;
+        margin: 1rem auto 2rem;
+    }
+    .cambiarclave h1 {
+        font-size: 2rem;
+        margin: auto auto 2rem;
+    }
+    .cambiarclave .button {
+        margin: 0 auto;
+    }
+}
