--- a/gymHouse/entrenamiento/templates/admin_entrenar.html
+++ b/gymHouse/entrenamiento/templates/admin_entrenar.html
@@ -39,7 +39,7 @@
                         </a> 
                     </li>
                     <li>
-                        <a href="{% url 'posts:adminNoticia' %}">
+                        <a href="{% url 'posts:noticias' %}">
                             <img src="{% static 'images/edit.png' %}">
                             <p>Noticias</p>
                         </a>
@@ -80,7 +80,7 @@
                     </a>
                 </li>
                 <li class="list">
-                    <a href="{% url 'posts:adminNoticia' %}">
+                    <a href="{% url 'posts:noticias' %}">
                         <span class="icon"><ion-icon name="camera-outline"></ion-icon></span>
                         <span class="text">Noticias</span>
                     </a>
