--- a/gymHouse/personas/templates/admin_turnos_ailin.html
+++ b/gymHouse/personas/templates/admin_turnos_ailin.html
@@ -35,7 +35,7 @@
                     </a> 
                 </li>
                 <li>
-                    <a href="{% url 'posts:adminNoticia' %}">
+                    <a href="{% url 'posts:noticias' %}">
                         <img src="{% static 'images/edit.png' %}">
                         <p>Noticias</p>
                     </a>
@@ -76,7 +76,7 @@
                 </a>
             </li>
             <li class="list">
-                <a href="{% url 'posts:adminNoticia' %}">
+                <a href="{% url 'posts:noticias' %}">
                     <span class="icon"><ion-icon name="camera-outline"></ion-icon></span>
                     <span class="text">Noticias</span>
                 </a>
