--- a/gymHouse/personas/templates/change_password.html
+++ b/gymHouse/personas/templates/change_password.html
@@ -9,8 +9,12 @@
     <title>Document</title>
 </head>
 <body>
-    <form action="" method="POST">
+    <form action="" method="POST" class="cambiarclave">
         {% csrf_token %}
+        <a href="#">
+            <img src="{% static '/images/turn-back' %}">
+        </a>
+        <h1>Cambiar contraseña</h1>
         <label for="id_old_password">Contraseña actual</label>
         <input type="password" name="old_password" required="" id="id_old_password">
 
@@ -20,7 +24,7 @@
         <label for="id_new_password2">Confirme la contraseña</label>
         <input type="password" name="new_password2" required="" id="id_new_password2">
 
-        <input type="submit" value="Actualizar">
+        <input class="button" type="submit" value="Actualizar">
 
     </form>
 </body>
