--- a/gymHouse/posts/templates/admin_noticias.html
+++ b/gymHouse/posts/templates/admin_noticias.html
@@ -34,7 +34,7 @@
                     </a> 
                 </li>
                 <li>
-                    <a href="{% url 'posts:adminNoticia' %}">
+                    <a href="{% url 'posts:noticias' %}">
                         <img src="{% static 'images/edit.png' %}">
                         <p>Noticias</p>
                     </a>
@@ -75,7 +75,7 @@
                 </a>
             </li>
             <li class="list">
-                <a href="{% url 'posts:adminNoticia' %}">
+                <a href="{% url 'posts:noticias' %}">
                     <span class="icon"><ion-icon name="camera-outline"></ion-icon></span>
                     <span class="text">Noticias</span>
                 </a>
@@ -112,7 +112,7 @@
             <div class="cards">
                 {% for card in noticias_slider %}
             
-                    <a class="card" href="{% url 'posts:adminNoticiaDetail' card.id %}">
+                    <a class="card" href="{% url 'posts:detail_noticia' card.id %}">
                         <figure>
                             <img src="{{card.foto.url}}" alt="{{card.titulo}}">
                         </figure>
