--- a/gymHouse/static/css/stylesPerfil.css
+++ b/gymHouse/static/css/stylesPerfil.css
@@ -68,87 +68,8 @@ body{
 .navigation, .navigation--space{
     display: none;
 }
-/*--------------------------------------------------------------------------------------------------------------*/
+/*--------------------------*/
 
-/*MENU-NAV COMUN EN AMBOS-----------------------------------------------------------------------------------------*/
-
-.menu{
-    height: 100%;
-    width: 5vw;
-    min-width: 5rem;
-    left: 0;
-    top: 0;
-    background: #d6e1ff;
-    color: rgb(0, 0, 0);
-    box-shadow: 3px 0px 10px rgba(0, 0, 0, 0.3);
-
-    position: fixed;
-    display: block;
-    z-index: 100;
-}
-.menu_icons{
-    height: 100%;
-    width: 100%;
-}
-.menu_icons ul{
-    margin: 0;
-    padding: 0;
-    height: 85%;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-}
-.logo{
-    display: flex;
-    justify-content: center;
-    align-content: center;
-    height: 9.4rem;
-    width: 100%;
-    display: grid;
-    float: left;
-}
-.menu_icons > ul > li > a > .logo{
-    height: 3.2rem;
-    width: 4.2rem;
-    display: flex;
-    justify-content: center;
-    margin: 0 auto;
-}
-.menu_icons li{
-    height: 9.4rem;
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-content: center;
-    display: grid;
-    float: left;
-}
-.menu_icons a{
-    text-decoration: none;
-}
-.menu_icons img{
-    height: 2.4rem;
-    width: 2.4rem;
-    display: flex;
-    justify-content: center;
-    margin: 0 auto;
-}
-.menu_icons p{
-    font-family: 'raleway bold'; 
-    font-size: max(1vw,min(1rem));
-    color: black;
-    margin: 0.4rem;
-}
-.menu_icons li:hover{
-    background: #c4d4ff;
-}
-
-/*FIN MENU-NAV----------------------------------------------------------------------------------------- */
-
-
-/*PROFILE (MINIMIZADO)----------------------------------------------------------------------------------*/
-
-/* Background */
 .perfil_bg--blur{
     backdrop-filter: blur(15px);
     width: 100%;
@@ -159,82 +80,37 @@ body{
     position: absolute;
     z-index: 5;
 }
-
-/*Desplegable*/
 .perfil_bg--gradient{
     width: 35vw;
-    height: 80vh;
-    min-width: 500px;
-    min-height: 500px;
+    min-width: 50rem;
     background: linear-gradient(180deg, #5A43FF 0%, #7876FF 18.75%, #8388FF 41.67%, #7B87FF 59.9%, #AEB8FF 82.81%, #E0E8FF 100%);
-    mix-blend-mode: normal;
-    box-shadow: 0px 4px 100px rgba(0, 0, 0, 0.50);
+    box-shadow: 0px 4px 100px rgb(0 0 0 / 50%);
     border-radius: 0px 50px 50px 0px;
-    display: flex;
-    justify-content: left;
-    align-items: center;
-    
+    padding: 3rem;
 }
-
-
-
 .perfil_bg{
     transition: all 0.5s;
-    width: 95%;
-    height: 93%;
     background: #F9F9FF;
     border-radius: 0px 50px 50px 0px;
-    box-shadow: 0px 4px 50px rgba(0, 0, 0, 0.30);
-    display: grid;
-    grid-template-columns: max(5vw,min(5rem)) 1fr;
-    box-sizing: content-box;
+    padding: 1rem 1rem 1rem 5rem
 }   
-
-.navbar--fill{
-    grid-column-start: 1;
-    grid-column-end: 2;
-}
-/*------------------------------------------------------------------------------------------------*/
-.perfil_bg > .profile{
-    width: auto;
-    height: 70vh;
-    min-height: 100%;
-}
-
 .profile{
-    grid-column-start: 2;
-    grid-column-end: 3;
-    width: 100%;
-    height: 100%;
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
     align-items: center;
-    padding: 1rem 0 0 0;
 }
 
-/*Profile Picture*/
 .profile_data--radiuspic{
-    width: 100%;
-    height: 35%;
-    display: flex;
-    align-items: flex-start;
-    justify-content: center;
-    
-}
-
-.profile_data--radiuspic > .profile_data--pic{
-    width: auto;
-    height: auto;
-    max-height: 100%;
-    display: flex;
-    align-items: flex-start;
-}
-
-.profile_data--radiuspic img{
+    width: fit-content;
+    height: fit-content;
     border: 3px solid rgba(0, 0, 0, 0.795);
-    border-radius: 50%;
+    border-radius: 100rem;
     padding: 0.8rem;
+}
+.profile_data--radiuspic img{
+    width: 15rem;
+    height: 15rem;
+    border-radius: 100rem;
 }
 
 /*---------------------------------------------------*/
@@ -242,122 +118,93 @@ body{
 /*Nickname-Name-age*/
 .profile_data--name{
     width: 100%;
-    height: 16%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-evenly;
-
+    height: fit-content;
+    margin-bottom: 2rem;
 }
-
-.profile_data--name p{
-    font-family: "raleway medium";
-    text-align: center;
-    font-size: max(1.1vw,min(1.9rem));
-    font-feature-settings: 'pnum' on, 'lnum' on;
-}
-
 .profile_data--name h1{
     font-family: "nunito black";
     text-align: center;
-    font-size: max(2.1vw,min(2.9rem));
+    font-size: 2.6rem;
+    line-height: 2.6rem;
+    padding: 1rem 0;
 }
-
 .profile_data--name h3{
     font-family: "nunito bold";
     text-align: center;
-    font-size: max(1.8vw,min(2.5rem));
+    font-size: 2.4rem;
+    line-height: 2.4rem;
+    padding: 0.5rem 0;
 }
-
-/*---------------------------------------------------*/
-
-/*Description*/
+.profile_data--name p{
+    font-family: "nunito bold";
+    text-align: center;
+    font-size: 1.6rem;
+    line-height: 1.6rem;
+}
 .profile_data--description{
-    height: auto;
     width: 90%;
-    display: flex;
-    flex-direction: column;
     text-align: justify;
     background: rgba(230, 230, 230, 0.5);
-    mix-blend-mode: normal;
     border-radius: 20px;
-    padding: 2.4%;
-    box-sizing: border-box;
+    padding: 1.5rem;
 }
-
 .profile_data--description p{
     font-family: "raleway medium";
     text-align: justify;
-    font-size: max(1vw,min(1.6rem));
+    font-size: 1.5rem;
     font-feature-settings: 'pnum' on, 'lnum' on;
-    line-height: 1.3em;
+    line-height: 1.5rem;
 }
-/*---------------------------------------------------*/
-
-/*Contacto-Altura-Peso*/
 ol{
     list-style: none;
 }
-
 .profile_data--numbers{
     width: 90%;
-    height: 10%;
+    margin: 1.5rem auto;
 }
-
 .profile_data--numbers ol{
-    width: 100%;
-    height: 100%;
     display: flex;
-    justify-content: space-between;
-    align-items: flex-start;
-    margin-top: 2%;
+    justify-content: space-evenly;
 }
-
 .profile_data--numbers li{
     width: 33%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    line-height: max(1vw,min(2rem));
 }
-
 .profile_data--numbers li p{
     font-family: "raleway medium";
     text-align: center;
-    font-size: max(.9vw,min(1.3rem));
-    color: #414141
+    font-size: 1.3rem;
 }
-
 .profile_data--numbers li h5{
     font-family: "raleway medium";
     text-align: center;
-    font-size: max(1.1vw,min(1.5rem));
+    font-size: 1.5rem;
     font-feature-settings: 'pnum' on, 'lnum' on;
 }
 
-/*----------------------------------------------------------*/
-/*BUTTON---------------------------------------------------*/
+/*BUTTON----------------------------------*/
 .profile_data--button{
-    width: 37%;
-    height: 7%;
     border-radius: 18px;
-    border-color: transparent;
+    overflow: hidden;
+    border: none;
     background-color: #5135FF;
     box-shadow: 0px 4px 4px rgb(0 0 0 / 25%);
     display: flex;
-    justify-content: center;
-    margin-bottom: 3%;
+    margin-bottom: 1rem;
 }
-
 .profile_data--button a{
     text-decoration: none;
     font-family: "raleway semibold";
-    font-size: max(.9vw,min(1.5rem));
+    font-size: 1.5rem;
     color: #D6E1FF;
+    padding: 1.5rem 3rem;
+}
+.botonito{
+    font-family: "raleway semibold";
+    font-size: 1.2rem;
+    color: black;
     display: flex;
     align-content: center;
-    margin: auto;
+    margin: auto auto 2rem;
 }
 /*----------------------------------------------------------*/
 
