--- a/gymHouse/static/css/styles_alumnos-turnos.css
+++ b/gymHouse/static/css/styles_alumnos-turnos.css
@@ -62,141 +62,32 @@ body{
     line-height: 1.5em;
 }
 /*--------------------------------------------------------------------------------------------------------------*/
-
-
-
-/*MENU-NAV-----------------------------------------------------------------------------------------*/
-
-.menu{
-    height: 100%;
-    width: 5vw;
-    min-width: 5rem;
-    left: 0;
-    top: 0;
-    background: #d6e1ff;
-    color: rgb(0, 0, 0);
-    box-shadow: 3px 0px 10px rgba(0, 0, 0, 0.3);
-
-    position: fixed;
-    display: block;
-    z-index: 100;
-}
-.menu_icons{
-    height: 100%;
-    width: 100%;
-}
-.menu_icons ul{
-    margin: 0;
-    padding: 0;
-}
-.logo{
+.turnos{
+    width: 100vw;
     display: flex;
-    justify-content: center;
-    align-content: center;
-    height: 9.4rem;
-    width: 100%;
-    display: grid;
-    float: left;
+    padding: 2rem 1rem 1rem 9rem;
 }
-.menu_icons > ul > li > a > .logo{
-    height: 3.2rem;
-    width: 4.2rem;
-    display: flex;
-    justify-content: center;
-    margin: 0 auto;
-}
-.menu_icons li{
-    height: 9.4rem;
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-content: center;
-    display: grid;
-    float: left;
-}
-.menu_icons a{
-    text-decoration: none;
-}
-.menu_icons img{
-    height: 2.4rem;
-    width: 2.4rem;
-    display: flex;
-    justify-content: center;
-    margin: 0 auto;
-}
-.menu_icons p{
-    font-family: 'raleway bold'; 
-    font-size: max(1vw,min(1rem));
-    color: black;
-    margin: 0.4rem;
-}
-.menu_icons li:hover{
-    background: #c4d4ff;
-}
-
-/*FIN MENU-NAV----------------------------------------------------------------------------------------- */
-
-/*Section shifts*/
 .shifts{
-    width: 100%;
-    height: 100vh;
-    display: grid;
-    gap: 1rem;
-    grid-template-columns: 5rem 2fr 1fr;
-    grid-template-rows: 50% 50%;
-    justify-items: center;
-    align-items: start;
-    padding: 3rem 2rem 2rem 2rem;
-    position: relative;
-    overflow: hidden;
+    width: 70%;
 }
-.window_turno_alumnos
-{
-    grid-column: 3/4;
-    grid-row: 2/3;
-    background: #FFFFFF;
-    border: 1px solid rgba(0, 0, 0, 0.1);
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.25);
-    border-radius: 32px;
-    min-height: 33rem;
-    position: absolute;
-    bottom: -100%;
-    /* right: 0; */
-    transition: all 1s ease;
-    justify-self: center;
+.acomodar{
+    width: 30%;
 }
-
-.window_turno_alumnos.active
-{
-    bottom: 9%;
-}
-
-.shifts_info > .alumnos
-{
+.shifts_info > .alumnos{
     display: none;
 }
 
 /*shift table-title*/
 .shifts_table{
-    grid-column-start: 2;
-    grid-column-end: 3;
-    width: 85%;
-    min-width: 42rem;
-    height: 90%;
-    min-height: 46rem;
-    /*max-height: 65rem;*/
     background: rgba(209, 202, 255, 0.9);
     box-shadow: 0px 4px 4px rgb(0 0 0 / 35%);
     border-radius: 18px;
     display: grid;
     grid-template-columns: repeat(5,1fr);
-    grid-template-rows: 7% 93%;
+    grid-template-rows: 1fr 12fr;
     padding: 1rem;
-    border-bottom: 10px solid transparent;
-    margin-top: 5vh;
-    grid-row: 1/3;
+    margin-right: 2rem;
 }
-
 .shifts_table h1{
     grid-column-start: 1;
     grid-column-end: 6;
@@ -209,7 +100,6 @@ body{
     font-size: 3.6rem;
     font-feature-settings: 'pnum' on, 'lnum' on;
 }
-
 /*shift table-days*/
 .shifts_table > .shifts_days--monday{
     grid-column-start: 1;
@@ -221,8 +111,6 @@ body{
     justify-content: space-around;
     align-items: center;
 }
-
-
 .shifts_days--tuesday{
     grid-column-start: 2;
     grid-column-end: 3;
@@ -233,8 +121,6 @@ body{
     justify-content: space-around;
     align-items: center;
 }
-
-
 .shifts_days--wednesday{
     grid-column-start: 3;
     grid-column-end: 4;
@@ -245,8 +131,6 @@ body{
     justify-content: space-around;
     align-items: center;
 }
-
-
 .shifts_days--thursday{
     grid-column-start: 4;
     grid-column-end: 5;
@@ -257,7 +141,6 @@ body{
     justify-content: space-around;
     align-items: center;
 }
-
 .shifts_days--friday{
     grid-column-start: 5;
     grid-column-end: 6;
@@ -268,26 +151,20 @@ body{
     justify-content: space-around;
     align-items: center;
 }
-
 /*shift table-info (common style)*/
 .shift_info--overflow{
-    height: 100%;
-    width: 100%;   
-    overflow: auto;
+    height: fit-content;
+    width: 100%; 
 }
-
 .shift_info--overflow::-webkit-scrollbar{
     display: none;
 }
-
 .shift_info--conteiner{
     height: fit-content;
     display: flex;
     flex-direction: column;
     align-items: center;
 }
-
-
 .shifts_info{
     width: 90%;
     background: #FFFFFF;
@@ -299,15 +176,13 @@ body{
     align-items: center;
     margin: 0.5rem;
 }
-
 .shifts_days{
     font-family: "raleway semibold";
     text-align: justify;
-    font-size: max(1.3vw,min(1.2rem));
+    font-size: 1.2rem;
     font-feature-settings: 'pnum' on, 'lnum' on;
     padding: 2%;
 }
-
 .shifts_info--hour{
     font-family: "raleway medium";
     text-align: justify;
@@ -353,13 +228,13 @@ body{
 /*Mensual suscription*/
 
 .landing-planmensual{
-    height: 30rem;
-    align-self: start;
-    width: 90%;
+    /* height: 30rem; */
+    /* align-self: start; */
+    /* width: 90%; */
     min-width: 17rem;
-    grid-column-start: 3;
+    /* grid-column-start: 3;
     grid-column-end: 4;
-    margin-top: 5vh;
+    margin-top: 5vh; */
     padding: 4px 0 20px;
     background-color:#FFFFFF;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.35);
@@ -450,209 +325,72 @@ body{
     margin: auto;
 }
 
-/*classmates*/
 
-.classmates{
-    grid-column-start: 3;
-    grid-column-end: 4;
-    grid-row-start: 2;
-    grid-row-end: 3;
-    height: 90%;
-    width: 80%;
+.window_turno_alumnos{
+    margin: 2rem auto 0;
     background: #FFFFFF;
     border: 1px solid rgba(0, 0, 0, 0.1);
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.25);
     border-radius: 32px;
-    display: grid;
-    grid-template-rows: 20% 1fr;
-    padding: 1.5rem;
-}
-
-.classmates_phrase{
-    grid-row-start: 1;
-    grid-row-end: 2;
-    align-self: center;
+    min-height: 16rem;
+    transition: all 1s ease;
     justify-self: center;
-    
 }
-
-.classmates_phrase p{
-    text-decoration: none;
-    font-family: "raleway semibold";
-    font-size: 2.2rem;
-    color: rgb(0, 0, 0);
-    display: flex;
-    align-content: center;
-    margin: auto;
+.window_turno_alumnos button{
+    font-weight: 800;
+    padding: 0.5rem 1rem;
+    margin:2rem;
+    border: none;
+    background-color: #b8b4ff;
+    color:#5135FF;
+    border-radius: 10px;
 }
-
-.classmates_names {
-    grid-row-start: 2;
-    grid-row-end: 3;
-}
-
-ol{
-    list-style: none;
-}
-
-.classmates_names ol{
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    justify-content: space-around;
-}
-
-.classmates_names ol > li{
-    height: 5rem;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-}
-
-.classmates_names img{
-    height: 5rem;
-    width: auto;
-    border: 1.5px solid rgba(0, 0, 0, 0.795);
-    border-radius: 50%;
-    padding: 0.3rem;
-}
-
-.classmates_names p{
-    height: 1rem;
-    text-decoration: none;
-    font-family: "raleway medium";
+.window_turno_alumnos h1{
+    font-family: "raleway bold";
     font-size: 1.8rem;
-    color: rgb(0, 0, 0);
+    margin: auto;
+    text-align: center;
+    padding: 0 1.2rem 2rem;
+}
+.alumnos_wrapper{
+    padding: 0 1.2rem 2rem;
+}
+.alumnos_wrapper ul{
+    height: fit-content;
+    width: 100%;
+}
+.alumnos_wrapper li{
+    font-family: "raleway semibold";
+    font-size: 1.6rem;
+    margin: 0 auto 1rem;
     display: flex;
-    align-content: center;
-    margin-left: 1.5rem;
-    align-self: center;
+    align-items: center;
 }
-
-
-.fill-mediaquery{
-    display: none;
-    height: 2rem;
-    width: 2rem;
+.alumnos_wrapper li img{
+    width: 4rem;
+    height: 4rem;
+    border-radius: 100%;
+    margin-right: 1rem;
 }
-
-/*----------------------------------------------------------------------------*/
-/* Celphone */
-
-/*Section shifts*/
 
 @media (max-width:700px) {
-
-    .menu{
-        display: none;
+    .turnos {
+        padding: 1rem;
+        display: block;
     }
-
     .shifts{
         width: 100%;
-        height: 100%;
-        display: flex;
-        flex-direction: column;
-        padding: 0;
-        justify-content: flex-start;
-        align-items: center;
     }
-    
-
-    /*shift table-title*/
-    .shifts_table{
-        width: 95%;
-        min-width: unset;
-        height: 90%;
-        max-height: 65rem;
-        padding: 0.2rem;
-        margin-top: 5vh;
+    .shifts_table {
+        margin-right: 0;
     }
-
-    .landing-planmensual{
-        height: 25rem;
-        align-self: center;
-        width: 80%;
-        min-width: 17rem;
-        margin-top: 3vh;
-        padding: 4px 0 20px;
-        background-color:#FFFFFF;
-        box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.35);
-        border-radius: 24px;
-        /* border: 1px rgb(0, 255, 47) dashed; */
-    }
-
-    .titulo p {
-        font-size: 1.7rem;
-        padding: 7px 0 7px;
-    }
-
-    .dia {
-        font-size: 1.6rem;
-        margin: 5px 0 3px;
-    }
-
-    .horario {
-        font-size: 1.5rem;
-        margin: 0 0 8px;
-    }
-
-    .plan p {
-        margin: 10px 0 8px;
-    }
-
-    .fill-mediaquery{
-        display: block;
-        padding-bottom: 2rem;
-    }
-}
-
-/*correccion estetica para ciertas pantallas*/
-
-@media (min-width:1800px) {
-    .shifts {
-        padding: 3rem 2rem 2rem 9rem;
-    }
-    
-}
-
-/*pantalla muy angosta*/
-@media (max-width:320px) {
-
-    .shifts_table{
+    .acomodar {
         width: 100%;
-        min-width: unset;
-        height: 90%;
-        max-height: 70rem;
-        padding: 0.2rem 0 0.2rem 0;
-        margin-top: 5vh;
     }
-
-    .shifts_table h1{
-        font-size: 3rem;
+    .landing-planmensual{
+        margin: 2rem 0;
     }
-    
-
-    .shifts_days{
-        font-size: max(1.3vw,min(.9rem));
+    .window_turno_alumnos{
+        margin-bottom: 10rem;
     }
-    
-    .shifts_info--hour{
-        font-size: max(0.85vw,min(.8rem));
-    }
-    
-    .shifts_info--prof{
-        font-size: max(0.85vw,min(.8rem));
-    }
-    
-    .shifts_info--pupils{
-        width: 85%;
-        min-width: unset;
-        height: auto;
-    }
-    
-    .shifts_info--pupils p{
-        font-size: max(0.8vw,min(0.7rem));
-    }
-
 }
