--- a/gymHouse/templates/index_admin_ailin.html
+++ b/gymHouse/templates/index_admin_ailin.html
@@ -33,7 +33,7 @@
                         </a> 
                     </li>
                     <li>
-                        <a href="{% url 'posts:adminNoticia' %}">
+                        <a href="{% url 'posts:noticias' %}">
                             <img src="{% static 'images/edit.png' %}">
                             <p>Noticias</p>
                         </a>
@@ -74,7 +74,7 @@
                     </a>
                 </li>
                 <li class="list">
-                    <a href="{% url 'posts:adminNoticia' %}">
+                    <a href="{% url 'posts:noticias' %}">
                         <span class="icon"><ion-icon name="camera-outline"></ion-icon></span>
                         <span class="text">Noticias</span>
                     </a>
