--- a/gymHouse/templates/index_alumnos.html
+++ b/gymHouse/templates/index_alumnos.html
@@ -54,6 +54,45 @@
                 </ul>
             </div>
         </nav>
+        
+        <div class="navigation" id="navigation">
+            
+            <ul>
+                <li class="list">
+                    <a href="{% url 'login_user' %}">
+                        <span class="icon"><ion-icon name="home-outline"></ion-icon></span>
+                        <span class="text">Inicio</span>
+                    </a>
+                </li>
+                <li class="list active">
+                    <a href="alumnos_perfil.html">
+                        <span class="icon"><ion-icon name="person-outline"></ion-icon></span>
+                        <span class="text">Perfil</span>
+                    </a>
+                </li>
+                <li class="list">
+                    <a href="{% url 'entrenamiento:ejercicios' %}">
+                        <span class="icon"><ion-icon name="chatbubble-outline"></ion-icon></span>
+                        <span class="text">Entrenar</span>
+                    </a>
+                </li>
+                <li class="list">
+                    <a href="{% url 'posts:noticias' %}">
+                        <span class="icon"><ion-icon name="camera-outline"></ion-icon></span>
+                        <span class="text">Noticias</span>
+                    </a>
+                </li>
+                <li class="list">
+                    <a href="{% url 'personas:turnos' %}">
+                        <span class="icon"><ion-icon name="settings-outline"></ion-icon></span>
+                        <span class="text">Turnos</span>
+                    </a>
+                </li>
+                <div class="indicator"></div>
+            </ul>
+        </div>
+        <div class="navigation--space" id="navigation--space"></div>
+    
         <section class="section-profile" id="section-profile">
             <div id="perfil_bg--blur" class="perfil_bg--blur">
                 <div class="perfil_bg--gradient" id="perfil_bg--gradient">
@@ -103,7 +142,7 @@
                             <button id="profile_data--button" class="profile_data--button">
                                 <a href="{% url 'personas:perfil' %}">Editar Perfil</a> 
                             </button>
-                            <a href="{% url 'logout' %}">Salir de la cuenta</a>
+                            <a class="botonito" href="{% url 'logout' %}">Salir de la cuenta</a>
                         </div>
                         <!-- Fin perfil minimizado........................................ -->
                     </div>
@@ -113,45 +152,6 @@
             <div class="aestethical-margin"></div>
     
         </section>
-        <div class="navigation" id="navigation">
-            
-            <ul>
-                <li class="list">
-                    <a href="{% url 'login_user' %}">
-                        <span class="icon"><ion-icon name="home-outline"></ion-icon></span>
-                        <span class="text">Inicio</span>
-                    </a>
-                </li>
-                <li class="list active">
-                    <a href="alumnos_perfil.html">
-                        <span class="icon"><ion-icon name="person-outline"></ion-icon></span>
-                        <span class="text">Perfil</span>
-                    </a>
-                </li>
-                <li class="list">
-                    <a href="{% url 'entrenamiento:ejercicios' %}">
-                        <span class="icon"><ion-icon name="chatbubble-outline"></ion-icon></span>
-                        <span class="text">Entrenar</span>
-                    </a>
-                </li>
-                <li class="list">
-                    <a href="{% url 'posts:noticias' %}">
-                        <span class="icon"><ion-icon name="camera-outline"></ion-icon></span>
-                        <span class="text">Noticias</span>
-                    </a>
-                </li>
-                <li class="list">
-                    <a href="{% url 'personas:turnos' %}">
-                        <span class="icon"><ion-icon name="settings-outline"></ion-icon></span>
-                        <span class="text">Turnos</span>
-                    </a>
-                </li>
-                <div class="indicator"></div>
-            </ul>
-        </div>
-        <div class="navigation--space" id="navigation--space"></div>
-    
-        
 
         <section class="landing">
             <div class="landing-noticias">
