--- a/gymHouse/templates/index.html
+++ b/gymHouse/templates/index.html
@@ -12,50 +12,63 @@
 <body>
 
     <!-- Landing page -->
+    <input type="checkbox" class="checkbox" id="menu-toogle"/>
+    <label for="menu-toogle" class="menu-toogle">
+        <img class="icon-menu" src="{% static '/images/menu.png' %}">
+        <img class="icon-cruz"src="{% static '/images/cross.png' %}">
+    </label>
 
-    <main class="main__background"> <!-- Resolver fondo! -->
-        <header>
-            <nav class="header__nav">
-                <ol class="nav__items"> <!-- agregar links y agregar modo celular! -->
-                    <li>
-                        <a href="#sobrenosotros">Sobre Nosotros</a>
-                    </li>
-                    <li>
-                        <a href="#noticias">Noticias</a>
-                    </li>
-                    <li>
-                        <a href="#horarios">Horarios</a> 
-                    </li>
-                    <li>
-                        <a href="#contactanos">Contactanos</a>
-                    </li>
-                    <li>
-                        <a href="#ubicacion">Ubicacion</a>
-                    </li>
-                </ol>
-            </nav>
-            <button class="main__button">  Iniciar Sesion  </button>
-            <div class="modal_login">
-                {{error}}
-                <form action="" method ="POST">
-                    {% csrf_token %}
-                    {% comment %} <label for="user">Usuario</label>
-                    <input type="text" id="user" name="user">
-                    <label for="pass">Contraseña</label>
-                    <input type="text" id="pass" name="password">
-                    <input type="submit" id="ingresar" value="Ingresar"> {% endcomment %}
-                    {{form}}
-                    <button type="submit">Ingresar</button>
-                </form>
+    <div class="main__button">
+        <button>Iniciar Sesion</button>
+    </div>
+
+    <nav class="menu">
+        <div class="menu-icons">
+            <ul class="nav__items"> 
+                <li>
+                    <a href="#sobrenosotros">Sobre Nosotros</a>
+                </li>
+                <li>
+                    <a href="#noticias">Noticias</a>
+                </li>
+                <li>
+                    <a href="#horarios">Horarios</a> 
+                </li>
+                <li>
+                    <a href="#ubicacion">Ubicación</a>
+                </li>
+                <li>
+                    <a href="#contacto">Contactanos</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+     <!-- Modal -->
+    <div class="modal_login">
+        <img class="login-cruz"src="{% static '/images/cross.png' %}">
+        <form action="" method ="POST">
+            <label for="username">Usuario</label>
+            <input class="input" type="text" id="username" name="user">
+            <label for="password">Contraseña</label>
+            <input class="input" type="password" id="password" name="password">
+            <div class="showPass">
+                <input class="check" type="checkbox" onclick="showPassword()">
+                <p>Mostrar contraseña</p>
             </div>
-        </header>
+            <input type="submit" id="ingresar" value="Ingresar"> 
+        </form>
+    </div>
+    <!-- End modal -->
+
+    <main class="main__background">
+        <div class="relleno-menu"></div>
         <div class="main__container"> 
             <div class="title__container">
                 <h1 class="main__title--border">House <br>Gym</h1>
                 <h1 class="main__title">House <br>Gym</h1>
             </div>
             <figure class="main__image">
-                <img src="{% static 'images/Image main.svg' %}" alt=""> <!-- Resolver calidad!!!! -->
+                <img src="{% static 'images/Image main.svg' %}" alt="">
             </figure>
         </div>
     </main>
@@ -115,27 +128,40 @@
     <!-- Noticias -->
     
     <div class="noticias" id="noticias">
-        <div id="slider-container" class="slider-container"> <!-- Resolver responsive! -->
-            <div class="slider" id="slider">
-                {% for post in posts %}
-                    <div class="slider__element"> 
-                        <a href="index_noticia.html">
-                            <img
-                            src="{{post.foto.url}}"
-                            alt=""/>
-                        </a>
-                        <div class="element__detalle"> 
-                            <h6>{{post.titulo}}</h6>
-                            <p>{{post.fecha|date:"d/m/Y"}}</p>
-                        </div>
-                    </div>
-                {% endfor %}
-            </div>
-        </div>
-        <div class="slider-buttons"> 
+        <div class="slider-button"> 
             <button id="button-left" class="button">
               <img src="{% static 'images/left arrow.png' %}" alt="">
             </button>
+        </div>
+        <div id="slider-container" class="slider-container"> <!-- Resolver responsive! -->
+            <div class="slider" id="slider">
+              <div class="slider__element"> 
+                <a href="index_noticia.html">
+                    <img src="{% static 'images/imagen.jfif' %}" alt="" />
+                </a>
+                <div class="element__detalle"> 
+                    <h6>Titulo</h6>
+                </div>
+              </div>
+              <div class="slider__element">
+                <a href="detalle_noticia.html">
+                    <img src="{% static 'images/imagen2.jfif' %}" alt=""/>
+                </a>
+                <div class="element__detalle">
+                    <h6>Titulo2</h6>
+                </div>
+              </div>
+              <div class="slider__element"> 
+                <a href="detalle_noticia.html">
+                    <img src="{% static 'images/imagen1.jpg' %}" alt=""/>
+                </a>
+                <div class="element__detalle">
+                    <h6>Titulo3</h6>
+                </div>
+              </div>
+            </div>
+        </div>
+        <div class="slider-button"> 
             <button id="button-right" class="button">
               <img src="{% static 'images/right arrow.png' %}" alt="">
             </button>
@@ -149,7 +175,7 @@
             Nuestro gymnasio se encuentra en el -barrio UOM- siendo el único por la zona
         </h1> 
         <iframe class="ubicacion_mapa" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3541.870679030558!2d-58.96320947942016!3d-27.410963687717057!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94450dd4ea307821%3A0x20160f1de01dbb45!2sHouse.Gimnasio!5e0!3m2!1ses-419!2sar!4v1659881013184!5m2!1ses-419!2sar" 
-        width="800" height="450" style="border-radius:22px;" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </section>
 
     <!-- Horarios -->
@@ -217,7 +243,7 @@
 
     <!-- Contacto -->
 
-    <section class="contacto" id="contactos">
+    <section class="contacto" id="contacto">
         <h1 class="contacto_title">Contactanos!</h1>
         <button class="contacto_mandarmensaje" href="https://wa.me/543624863322/?text=Holaa" target="_blank"><p>MANDAR MENSAJE</p></button>
         <div class="contacto_redes"> 
@@ -239,7 +265,16 @@
             </figure>
         </div>
     </section>
-    
+    <script>
+        function showPassword(){
+            var x= document.getElementById("password");
+            if (x.type === "password"){
+                x.type = "text";
+            }else{
+                x.type = "password";
+            }
+        }
+    </script>
     <script src="{% static 'js/slider_noticias.js' %}"></script>
     <script src="{% static 'js/modal_login.js' %}"></script>
 </body>
