--- a/gymHouse/static/css/styles.css
+++ b/gymHouse/static/css/styles.css
@@ -117,7 +117,6 @@ html{
 @media (max-width: 450px) {
     .main__container{
         height: 70vh;
-        max-width: 40rem;
     }
     .title__container{
         width: 100%;
@@ -380,8 +379,8 @@ html{
     position: absolute;
     height: fit-content;
     background-color:#8674ff;
-    left: 0.8rem;
-    top: 0.8rem;
+    right: 1rem;
+    top: 7rem;
     border-radius: 18px;
     opacity: 0;
     transition: all .6s ease;
@@ -880,7 +879,6 @@ html{
 
 .contacto{
     background:#ffffff;
-    width: 100vw;
     text-align: center;
     margin: 6% auto;
 }
